<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/selectPortBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/machineConfig"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_margin="10dp" />

    <TextView
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baud_rate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/baudRateValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="115200" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/databits"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/dataBitsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/dataBits5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5" />

        <RadioButton
            android:id="@+id/dataBits6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="6" />

        <RadioButton
            android:id="@+id/dataBits7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="7" />

        <RadioButton
            android:id="@+id/dataBits8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopbits"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/stopBitsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/stopBits1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1" />

        <RadioButton
            android:id="@+id/stopBits2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <RadioGroup
        android:id="@+id/parityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/parityNone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            android:checked="false" />

        <RadioButton
            android:id="@+id/parityOdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/odd"
            android:checked="false" />

        <RadioButton
            android:id="@+id/parityEven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/even"
            android:checked="false" />
    </RadioGroup>

    <Button
        android:id="@+id/connectBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <TextView
        android:id="@+id/infosText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swResetM999"
        android:id="@+id/swresetBt"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/lbLayout"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/linkbus"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="true"
            android:layout_margin="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/vtg"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginRight="10dp" />
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vtgSwitch"
                android:layout_gravity="center_horizontal"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="true"
            android:layout_margin="5dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/reset"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginRight="10dp" />
            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/resetSwitch"
                android:layout_gravity="center_horizontal"
                android:checked="false" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
